--- a/contact.html
+++ b/contact.html
@@ -25,11 +25,11 @@
         <textarea rows="4"  id="massage" required> </textarea>
         <br>
         <br>
-         <button type="submit">Send</button>
+         <button typesubmit">Send</button>
          
 
     </form>
   
 
 </body>
-</html>
+</html>="
