--- a/profile/profile.html
+++ b/profile/profile.html
@@ -13,7 +13,7 @@
     <div id="full-description">
     <div>
     <nav> 
-        <div> <span class="color">My</span> profile</div>
+        <div> <span class="color">My</span> profile</div>lo
         <ul>
           <li class="color"> Home</li>
           <li> My project </li>
