--- a/task2/index.html
+++ b/task2/index.html
@@ -38,6 +38,7 @@
                     <h3>Dental Implants</h3>
                     </div>
                      <p>High-quality implants to restore your smile.</p>
+                     <span> see more</span>
 
                 </div>
                 <div class="service-card">
@@ -46,6 +47,7 @@
                     <h3>Root Canal Treatment</h3>
                     </div>
                      <p>Advanced root canal procedures to relieve pain and save your natural teeth.</p>
+                     <span> see more</span>
 
                 </div>
                 <div class="service-card">
@@ -54,6 +56,7 @@
                     <h3>Pediatric Dentistry</h3>
                     </div>
                      <p>Gentle and friendly dental care designed especially for children.</p>
+                     <span> see more</span>
 
                 </div>
                  <div class="service-card">
@@ -62,6 +65,7 @@
                     <h3>Dental Checkups</h3>
                     </div>
                      <p>Regular checkups to maintain oral health and prevent future problems.</p>
+                     <span> see more</span>
 
                 </div>
                 <div class="service-card">
@@ -71,6 +75,7 @@
                     <h3>Braces</h3>
                     </div>
                      <p>Straighten your teeth with our modern braces.</p>
+                     <span> see more</span>
                 </div>
                 
                 <div class="service-card">
@@ -80,6 +85,7 @@
                     <h3>Teeth Whitening</h3>
                     </div>
                      <p>Brighten your smile with our safe whitening.</p>
+                     <span> see more</span>
 
                 </div>
                 
