--- a/Rose/home.html
+++ b/Rose/home.html
@@ -7,14 +7,14 @@
       <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+ <header>
     <nav>
         <ul id="nav-bar">
-            <li >Home </li>
-            <li> About</li>
-            <li> Service</li>
-            <li> Gallery</li>
-            <li> Contant</li>
+            <li ><a href="home.html">Home</a> </li>
+            <li> <a href="about.html">About</a></li>
+            <li> <a href="services.html">Service</a></li>
+            <li> <a href="">Gallery</a></li>
+            <li><a href="">Contant</a> </li>
         </ul>
     </nav>
 </header>
@@ -25,5 +25,9 @@
     <p> Discover gentle skincare products made with care<br>
      to keep your skin healthy, soft, and radiant.</p>
  </div>   
+ <div> 
+
+ </div>
 </section>
+
 </html>
