--- a/Rose/home.html
+++ b/Rose/home.html
@@ -7,13 +7,13 @@
       <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <header>
+   <header>
     <nav>
         <ul id="nav-bar">
             <li ><a href="home.html">Home</a> </li>
             <li> <a href="about.html">About</a></li>
             <li> <a href="services.html">Service</a></li>
-            <li> <a href="">Gallery</a></li>
+            <li> <a href="gellary.html">Gallery</a></li>
             <li><a href="">Contant</a> </li>
         </ul>
     </nav>
