--- a/Rose/services.html
+++ b/Rose/services.html
@@ -7,13 +7,13 @@
     <title>Document</title>
 </head>
 <body>
- <header>
+  <header>
     <nav>
         <ul id="nav-bar">
             <li ><a href="home.html">Home</a> </li>
             <li> <a href="about.html">About</a></li>
             <li> <a href="services.html">Service</a></li>
-            <li> <a href="">Gallery</a></li>
+            <li> <a href="gellary.html">Gallery</a></li>
             <li><a href="">Contant</a> </li>
         </ul>
     </nav>
@@ -23,7 +23,8 @@
             <div class="service-cards">
                 <div class="service-card"> 
             <img   src="https://i.pinimg.com/736x/85/66/67/856667d41cfba0584794482cc403fa96.jpg">
-            <h3> </h3>
+            
+            
                 </div>
                   <div class="service-card"> 
             <img   src="https://i.pinimg.com/1200x/f9/c6/97/f9c697d97caca8e1963707166a4254bd.jpg">
