--- a/Rose/about.html
+++ b/Rose/about.html
@@ -10,6 +10,7 @@
   <header>
     <nav>
         <ul id="nav-bar">
+              <li class="rose"><span>Rose</span> </li>
             <li ><a href="home.html">Home</a> </li>
             <li> <a href="about.html">About</a></li>
             <li> <a href="services.html">Service</a></li>
