--- a/Rose/services.html
+++ b/Rose/services.html
@@ -7,15 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-  <header>
+   <header>
     <nav>
         <ul id="nav-bar">
-              <li class="rose"><span>Rose</span> </li>
-            <li ><a href="home.html">Home</a> </li>
-            <li> <a href="about.html">About</a></li>
-            <li> <a href="services.html">Service</a></li>
-            <li> <a href="gellary.html">Gallery</a></li>
-            <li><a href="">Contant</a> </li>
+            <li class="rose"><span>Rose</span> </li>
+            <li class="a"><a href="home.html">Home</a> </li>
+            <li class="a"> <a href="about.html">About</a></li>
+            <li class="a"> <a href="services.html">Service</a></li>
+            <li class="a"> <a href="gellary.html">Gallery</a></li>
+            <li class="a"><a href="">Contant</a> </li>
         </ul>
     </nav>
 </header>
